infra/opensearch-k8s/overlays/wsl/services.yaml
# Service for single node
# overlays/wsl/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-cluster
  labels:
    app: opensearch
spec:
  selector:
    app: opensearch
  ports:
  - name: http
    port: 9200
    targetPort: 9200
  - name: transport
    port: 9300
    targetPort: 9300
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-node-headless
  labels:
    app: opensearch
spec:
  selector:
    app: opensearch
  clusterIP: None
  ports:
  - name: http
    port: 9200
    targetPort: 9200
  - name: transport
    port: 9300
    targetPort: 9300
